fixed horizontal scrolling in layout; changed layout to bootstraps rows and columns; changed pagination of complete classes to 25

--- a/app/assets/stylesheets/cecilia_custom.css
+++ b/app/assets/stylesheets/cecilia_custom.css
@@ -14,13 +14,6 @@ div.hr {
     display: none;
 }
 
-main div {
-}
-
-.flex-center {
-    display: flex;
-    justify-content: center;
-}
 
 .transparent {
   background: rgba(0,0,0,0.0);
