--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,7 @@ $font-family-serif: 'IM Fell English';
 $font-family-sans-serif: $font-family-serif;
 $font-family-base: $font-family-serif;
 $font-size-h6: 14px !default;
+$screen-md-min: 900px;
 
 
 @import "bootstrap-sprockets";
@@ -26,6 +27,14 @@ $level-2: #A6761D;
 $level-3: #E7298A;
 $level-4: #7570B3;
 $level-5: #D95F02;
+@media(max-width: $screen-sm-max){
+  .wrapper{
+    width: 100% !important
+  }
+}
+.wrapper{
+  width: 880px;
+}
 
 ul {
     list-style-type: none;
